src/parser/snapshots/rbx_rsml__parser__tests__schema_missing_brace.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Schema {
        pub_modifier: None,
        declaration: Node {
            token: SpannedToken(
                0,
                SchemaDeclaration,
                7,
            ),
            leading_trivia: None,
        },
        name: Some(
            Node {
                token: SpannedToken(
                    8,
                    Identifier(
                        "Theme",
                    ),
                    13,
                ),
                leading_trivia: None,
            },
        ),
        body: None,
    },
]
