src/parser/snapshots/rbx_rsml__parser__tests__schema_no_space_colon.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Schema {
        pub_modifier: None,
        declaration: Node {
            token: SpannedToken(
                0,
                SchemaDeclaration,
                7,
            ),
            leading_trivia: None,
        },
        name: Some(
            Node {
                token: SpannedToken(
                    8,
                    Identifier(
                        "Theme",
                    ),
                    13,
                ),
                leading_trivia: None,
            },
        ),
        body: Some(
            Delimited {
                left: Node {
                    token: SpannedToken(
                        14,
                        ScopeOpen,
                        15,
                    ),
                    leading_trivia: None,
                },
                content: Some(
                    [
                        SchemaField {
                            name: Node {
                                token: SpannedToken(
                                    16,
                                    TokenIdentifier(
                                        "Bg",
                                    ),
                                    19,
                                ),
                                leading_trivia: None,
                            },
                            colon: Some(
                                Node {
                                    token: SpannedToken(
                                        19,
                                        StateSelectorOrEnumPart(
                                            Some(
                                                "Color3",
                                            ),
                                        ),
                                        26,
                                    ),
                                    leading_trivia: None,
                                },
                            ),
                            type_name: None,
                            terminator: Some(
                                Node {
                                    token: SpannedToken(
                                        26,
                                        SemiColon,
                                        27,
                                    ),
                                    leading_trivia: None,
                                },
                            ),
                        },
                    ],
                ),
                right: Some(
                    Node {
                        token: SpannedToken(
                            28,
                            ScopeClose,
                            29,
                        ),
                        leading_trivia: None,
                    },
                ),
            },
        ),
    },
]
